@@ -3,6 +3,8 @@ Changes made from the "0.6" release to the "0.7" release:
 
 * Bertrand Coconnier:
 
+- Removed the use of FcStrSet and FcStrList objects for the catalog list. Use
+  object __GLCarray instead.
 - Fixed bug #1814773 (QuesoGLC uses the system library GLEW whenever
   possible. Otherwise a copy of GLEW is automagically built and embedded with
   QuesoGLC)
